fix(actionbar): corrected missing outer spacing

--- a/components/actionbar/index.css
+++ b/components/actionbar/index.css
@@ -33,8 +33,8 @@ governing permissions and limitations under the License.
   --spectrum-actionbar-emphasized-background-color : var(--mod-informative-background-color-default, var(--spectrum-informative-background-color-default));
   --spectrum-actionbar-emphasized-item-counter-color: var(--mod-white, var(--spectrum-white));
 
-  /* spacing of action bar bottom outer edge */
-  --spectrum-actionbar-spacing-outter-edge: var(--mod-spacing-300, var(--spectrum-spacing-300));
+  /* spacing of action bar bottom and horizontal outer edge */
+  --spectrum-actionbar-spacing-outer-edge: var(--mod-spacing-300, var(--spectrum-spacing-300));
 
   /* spacing of close button */
   --spectrum-actionbar-spacing-close-button-top: var(--mod-spacing-100, var(--spectrum-spacing-100));
@@ -71,7 +71,8 @@ governing permissions and limitations under the License.
 
 /* ActionBar is outer wrapper with nested popover component within */
 .spectrum-ActionBar {
-  margin-block-end: var(--mod-actionbar-spacing-outter-edge, var(--spectrum-actionbar-spacing-outter-edge));
+  /* creates horizontal spacing to edge */
+  padding: 0 var(--mod-actionbar-spacing-outer-edge, var(--spectrum-actionbar-spacing-outer-edge));
   inset-block-end: 0;
   z-index: 1;
 
@@ -86,14 +87,16 @@ governing permissions and limitations under the License.
   opacity: 0;
 
   &.is-open {
-    block-size: var(--mod-actionbar-height, var(--spectrum-actionbar-height));
+    /* add ActionBar bottom margin to height for correct spacing even when sticky */
+    block-size: calc(var(--mod-actionbar-spacing-outer-edge, var(--spectrum-actionbar-spacing-outer-edge)) + var(--mod-actionbar-height, var(--spectrum-actionbar-height)));
     opacity: 1;
   }
 
   .spectrum-ActionBar-popover {
+    /* popover is ActionBar height */
+    block-size: var(--mod-actionbar-height, var(--spectrum-actionbar-height));
     box-sizing: border-box;
     inline-size: 100%;
-    block-size: 100%;
     margin: auto;
     padding-block-start: 0;
     padding-block-end: 0;
